--- a/house_prices.ipynb
+++ b/house_prices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "house-prices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOlw4XaQXVBEX/8at3sZ4ax",
+      "authorship_tag": "ABX9TyNn28xCrkCBmQCCQG8/os2c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,8 +33,7 @@
         "id": "OFcZVAmnv_To"
       },
       "source": [
-        "import numpy as np\n",
-        "import pandas as pd"
+        "import numpy as np\n"
       ],
       "execution_count": null,
       "outputs": []
